# movie_rating_guess

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
models/: experiment_results_all_combinations.csv  model_comparison_all_datasets.csv
notebooks/: 01_eda.ipynb  02_experiments.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb
src/: __init__.py  api.py  api_s3.py  config.py  mlflow_utils.py  predict.py  predict_s3.py  schemas.py  train.py  transformers.py
