[project]
name = "movie-rating-guess"
version = "0.1.0"
description = "Movie rating prediction using machine learning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.9.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[project.optional-dependencies]
boosting = [
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
]
sentence-transformers = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
all = [
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Since this is a data science project with notebooks, not a package
# We don't need to install any Python packages
py-modules = []

[tool.setuptools.packages.find]
# Don't include any packages - this is a project, not a library
where = ["."]
include = []

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ['py39']

