[project]
name = "movie-rating-guess"
version = "0.1.0"
description = "Movie rating prediction using machine learning"
readme = "README.md"
requires-python = ">=3.9"
# Core dependencies for API runtime only
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "boto3>=1.28.0",
]

[project.optional-dependencies]
# Exploration dependencies (notebooks, visualization, EDA)
exploration = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "notebook>=7.0.0",
]

# Additional ML models (not needed for production API)
boosting-extra = [
    "xgboost>=2.0.0",
]

# Advanced NLP features (not needed for v1 production model)
sentence-transformers = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]

# Development and testing tools
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "requests>=2.31.0",
    "httpx>=0.25.0",
]

# Training / experiment tracking (NOT needed for production API)
training = [
    "mlflow>=2.9.0",
]

# Everything (for local development)
all = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "notebook>=7.0.0",
    "xgboost>=2.0.0",
    "torch>=2.0.0",
    "mlflow>=2.9.0",
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "requests>=2.31.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Since this is a data science project with notebooks, not a package
# We don't need to install any Python packages
py-modules = []

[tool.setuptools.packages.find]
# Don't include any packages - this is a project, not a library
where = ["."]
include = []

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ['py39']

