[project]
name = "movie-rating-guess"
version = "0.1.0"
description = "Movie rating prediction using machine learning"
# readme = "README.md"  # Commented out - not needed for Docker build
requires-python = ">=3.9"

# Core dependencies
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    # Removed mlflow and boto3 - not needed for local model loading
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "requests>=2.31.0",
    "httpx>=0.25.0",
]

training = [
    "mlflow>=2.9.0",
    "xgboost>=2.0.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0"
]

notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ['py39']